--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: npm install
+        run: 
+           npm install --global @gridsome/cli
+           npm install
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
