--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,10 +24,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: 
-           npm install --global @gridsome/cli
-           npm install
+        run: npm install --global @gridsome/cli
+           
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: gridsome develop
+        run: npm install,
+             gridsome develop
+             
