--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,11 +24,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: npm install --global @gridsome/cli
+        run: npm install
            
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: npm install,
-             gridsome develop
+        run: gridsome develop
              
